Agrega controladores, contexto de database y se generan las vistas

--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/appsettings.json
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LigaProJJMContext": "Server=(localdb)\\mssqllocaldb;Database=LigaProJJMContext-d226c5a9-aa66-4b13-af6a-cee3759bbc50;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
