Crea repositorio jugador, modifica el controlador y edita las vistas, se añade la migración y se coloca los repositorios en el program.cs

--- a/LigaPro-CalvaJ_RodriguezJ_RualesM/appsettings.json
+++ b/LigaPro-CalvaJ_RodriguezJ_RualesM/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LigaProJJMContext": "Server=(localdb)\\mssqllocaldb;Database=LigaProJJMContext-d226c5a9-aa66-4b13-af6a-cee3759bbc50;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LigaProJJMContext": "Server=localhost\\SQLEXPRESS;Database=LigaProEcuadorDatabaseJJM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
